--- a/MyVet.Web/Views/Home/MyAgenda.cshtml
+++ b/MyVet.Web/Views/Home/MyAgenda.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyVet.Web.Data.Entities.Agenda>
+﻿@model IEnumerable<MyVet.Web.Models.AgendaViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -6,10 +6,6 @@
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
 <br />
-
-<p>
-    <a asp-action="AddDays" class="btn btn-primary"><i class="glyphicon glyphicon-plus"></i> Adicionar dias</a>
-</p>
 
 <div class="row">
     <div class="col-md-12">
@@ -47,13 +43,26 @@
                                     @Html.DisplayFor(modelItem => item.DateLocal)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Owner.User.FullName)
+                                    @if (item.IsMine)
+                                    {
+                                        @Html.DisplayFor(modelItem => item.Owner.User.FullName)
+                                    }
+                                    else if (!item.IsAvailable)
+                                    {
+                                        @Html.DisplayFor(modelItem => item.Reserved)
+                                    }
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Pet.Name)
+                                    @if (item.IsMine)
+                                    {
+                                        @Html.DisplayFor(modelItem => item.Pet.Name)
+                                    }
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Remarks)
+                                    @if (item.IsMine)
+                                    {
+                                        @Html.DisplayFor(modelItem => item.Remarks)
+                                    }
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.IsAvailable)
@@ -61,11 +70,14 @@
                                 <td>
                                     @if (item.IsAvailable)
                                     {
-                                        <a asp-action="Assing" class="btn btn-default" asp-route-id="@item.Id"><i class="glyphicon glyphicon-plus"></i></a>
+                                        <a asp-action="Assing" class="btn btn-primary" asp-route-id="@item.Id"><i class="glyphicon glyphicon-plus"></i></a>
                                     }
                                     else
                                     {
-                                        <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-minus"></i></button>
+                                        @if (item.IsMine)
+                                        {
+                                            <button data-id="@item.Id" class="btn btn-danger deleteItem" data-toggle="modal" data-target="#deleteDialog"><i class="glyphicon glyphicon-minus"></i></button>
+                                        }
                                     }
                                 </td>
                             </tr>
@@ -77,7 +89,7 @@
     </div>
 </div>
 
-<!--U-assign agenda-->
+<!-- Un-assign agenda-->
 <div class="modal fade" id="deleteDialog" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -88,7 +100,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p>Está seguro de cancelar esta cita?</p>
+                <p>Está seguro de cancelar la cita?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cerrar</button>
@@ -103,19 +115,19 @@
     <script src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function () {
-            $('#MyTable').DataTable();
+    	$(document).ready(function () {
+        	$('#MyTable').DataTable();
 
-            // Delete item
-            var item_to_delete;
+        	// Delete item
+        	var item_to_delete;
 
-            $('.deleteItem').click((e) => {
-                item_to_delete = e.currentTarget.dataset.id;
-            });
+        	$('.deleteItem').click((e) => {
+            	item_to_delete = e.currentTarget.dataset.id;
+        	});
 
-            $("#btnYesDelete").click(function () {
-                window.location.href = '/Agenda/Unassign/' + item_to_delete;
-            });
-        });
+        	$("#btnYesDelete").click(function () {
+            	window.location.href = '/Home/Unassign/' + item_to_delete;
+        	});
+    	});
     </script>
 }
