--- a/MyVet.Prism/MyVet.Prism/App.xaml
+++ b/MyVet.Prism/MyVet.Prism/App.xaml
@@ -17,6 +17,7 @@
             <Color x:Key="colorAccent">#BF4904</Color>
             <Color x:Key="colorFont">#0468BF</Color>
             <Color x:Key="colorFontInverse">#F2F2F2</Color>
+            <Color x:Key="ColorDanger">#D9042B</Color>
 
             <!-- Styles -->
             <Style TargetType="Button">
@@ -30,6 +31,12 @@
             <Style x:Key="SecondaryButton" TargetType="Button">
                 <Setter Property="BackgroundColor" Value="{StaticResource colorSecondary}" />
             </Style>
+
+            <Style x:Key="DangerButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{StaticResource ColorDanger}" />
+                <Setter Property="TextColor" Value="{StaticResource colorFontInverse}" />
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
