--- a/MyVet.Prism/MyVet.Prism/Views/PetPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/PetPage.xaml
@@ -8,11 +8,12 @@
                IconImageSource="ic_pet"
              BackgroundColor="{StaticResource colorBackground}"
              Title="{Binding Title}">
-    
-    <ScrollView>
-        <StackLayout
+
+    <StackLayout      
         Padding="10">
-            <ffimageloading:CachedImage 
+        <ScrollView>
+            <StackLayout>
+                <ffimageloading:CachedImage 
             Aspect="AspectFit"
             Grid.Column="0"
             Source="{Binding Pet.ImageUrl}"
@@ -24,65 +25,70 @@
             DownsampleToViewSize="True"
             HeightRequest="300"
             WidthRequest="300"/>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <Label
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Label
                 Grid.Column="0"
                 Grid.Row="0"
                 FontAttributes="Bold"
                 Text="Nombre"/>
-                <Label
+                    <Label
                 Grid.Column="1"
                 Grid.Row="0"
                 Text="{Binding Pet.Name}"/>
-                <Label
+                    <Label
                 Grid.Column="0"
                 Grid.Row="1"
                 FontAttributes="Bold"
                 Text="Born"/>
-                <Label
+                    <Label
                 Grid.Column="1"
                 Grid.Row="1"
                 Text="{Binding Pet.Born, StringFormat='{0:yyyy/MM/dd}'}"/>
-                <Label
+                    <Label
                  Grid.Column="0"
                  Grid.Row="2"
                 FontAttributes="Bold"
                  Text="Raza"/>
-                <Label
+                    <Label
                  Grid.Column="1"
                  Grid.Row="2"
                  Text="{Binding Pet.Race}"/>
-                <Label
+                    <Label
                  Grid.Column="0"
                  Grid.Row="3"
                 FontAttributes="Bold"
                  Text="Tipo mascota"/>
-                <Label
+                    <Label
                  Grid.Column="1"
                  Grid.Row="3"
                  Text="{Binding Pet.PetType}"/>
-                <Label
+                    <Label
                  Grid.Column="0"
                  Grid.Row="4"
                 FontAttributes="Bold"
                  Text="Comentarios"/>
-                <Label
+                    <Label
                  Grid.Column="1"
                  Grid.Row="4"
                  Text="{Binding Pet.Remarks}"/>
-            </Grid>
-        </StackLayout>
-    </ScrollView>
+                </Grid>
+            </StackLayout>
+        </ScrollView>
+        <Button
+            Command="{Binding EditPetCommand}"
+            Text="Editar mascota"
+            VerticalOptions="EndAndExpand"/>
+    </StackLayout>
 </ContentPage>
