--- a/MyVet.Prism/MyVet.Prism/Views/PetsPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/PetsPage.xaml
@@ -7,33 +7,36 @@
              x:Class="MyVet.Prism.Views.PetsPage"
              BackgroundColor="{StaticResource colorBackground}"
              Title="{Binding Title}">
-    
-    <ScrollView>
-        <StackLayout
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Icon="ic_action_add_circle" Command="{Binding AddPetCommand}"/>
+    </ContentPage.ToolbarItems>
+
+    <StackLayout
         Padding="10">
-            <ListView
+        <ListView
             BackgroundColor="Transparent"
             HasUnevenRows="True"
             ItemsSource="{Binding Pets}"
             SeparatorVisibility="None">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <Frame
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Frame
                             CornerRadius="10"
                             HasShadow="True"
                             Margin="0,0,0,5">
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer
+                            <Frame.GestureRecognizers>
+                                <TapGestureRecognizer
                                      Command="{Binding SelectPetCommand}"/>
-                                </Frame.GestureRecognizers>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="Auto"/>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <ffimageloading:CachedImage
+                            </Frame.GestureRecognizers>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <ffimageloading:CachedImage
                                     Grid.Column="0"
                                     Source="{Binding ImageUrl}"
                                     LoadingPlaceholder="LoaderImage"
@@ -43,62 +46,61 @@
                                     RetryDelay="600"
                                     DownsampleToViewSize="True"
                                     WidthRequest="100"/>
-                                    <Grid
+                                <Grid
                                 Grid.Column="1">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="2*"/>
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                            <RowDefinition Height="Auto"/>
-                                        </Grid.RowDefinitions>
-                                        <Label
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="2*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    <Label
                                     Grid.Column="0"
                                     Grid.Row="0"
                                     Text="Nombre"/>
-                                        <Label
+                                    <Label
                                     Grid.Column="1"
                                     Grid.Row="0"
                                     FontAttributes="Bold"
                                     Text="{Binding Name}"/>
 
-                                        <Label
+                                    <Label
                                     Grid.Column="0"
                                     Grid.Row="1"
                                     Text="Born"/>
-                                        <Label
+                                    <Label
                                     Grid.Column="1"
                                     Grid.Row="1"
                                     FontAttributes="Bold"
                                     Text="{Binding Born, StringFormat='{0:yyyy/MM/dd}'}"/>
 
-                                        <Label
+                                    <Label
                                     Grid.Column="0"
                                     Grid.Row="2"
                                     Text="Raza"/>
-                                        <Label
+                                    <Label
                                     Grid.Column="1"
                                     Grid.Row="2"
                                     FontAttributes="Bold"
                                     Text="{Binding Race}"/>
-                                    </Grid>
-                                    <Image
+                                </Grid>
+                                <Image
                                 Grid.Column="2"
                                 Source="ic_chevron_right"/>
-                                </Grid>
-                            </Frame>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
-        </StackLayout>
-    </ScrollView>
+                            </Grid>
+                        </Frame>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </StackLayout>
 </ContentPage>
