--- a/MyVet.Prism/MyVet.Prism/Views/RegisterPage.xaml
+++ b/MyVet.Prism/MyVet.Prism/Views/RegisterPage.xaml
@@ -114,7 +114,7 @@
                 <Button
                 	Command="{Binding RegisterCommand}"
                 	IsEnabled="{Binding IsEnabled}"
-                	Text="Register"
+                	Text="Registrarse"
                 	VerticalOptions="EndAndExpand"/>
             </StackLayout>
             <busyindicator:SfBusyIndicator  
